Fix for problem with activating find-in-page match via find tickbar.

The problem was that the TabFindHelper was throwing out certain valid find replies because the helper was only comparing them against the latest find request ID it knows about (which is usually the ID that valid replies will have).

This patch makes it so that this and another android-specific find helper now properly track the current find session ID (in addition to the latest request ID) so that they can accept all valid find replies relevant to the current find session.

BUG=605297

Review URL: https://codereview.chromium.org/1913543002

Cr-Commit-Position: refs/heads/master@{#389603}

Former-commit-id: 1cfca29de5756e4f3e5b5210d21cf6f4461d0aa8